docs: add enterprise Kyvora README, comprehensive docs suite, and update platform submodules